# botango

./: pyproject.toml
.github/workflows/: ci.yaml
src/botango/: cli.py
src/botango/core/: build_project.py  connection.py  model_project.py  project_cli.py
src/botango/schemas/: default_schema.py
src/botango/templates/: default_init.j2  example_handler.j2  example_init_handler.j2  main.j2  settings.j2
src/botango/templates/database/: connection.j2  init.j2
src/botango/utils/: file_creator.py  file_systems.py  template_creator.py  toml_builder.py
