[project]
name = "botango"
version = "0.1.0"
description = "CLI framework for create Telegram bots by aiogram"
readme = "README.md"
requires-python = ">=3.12"

license = { text = "MIT" }
authors = [{ name = "PythonCorn", email="PythonCorn@hotmail.com"}]

dependencies = [
    "aiogram>=3.22.0",
    "click>=8.3.0",
    "jinja2>=3.1.6",
    "toml>=0.10.2",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.18.16",
    "watchdog>=6.0.0",
    "aiocryptopay==0.4.8",
    "sqlalchemy==2.0.44",
    "aiosqlite==0.21.0",
    "xrocket==0.2.1",
]

[project.urls]
"Repository" = "https://github.com/PythonCorn/botango"

[project.scripts]
botango = "botango.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
